# template-benchmarks-rs

./: Cargo.toml  README.md  make-results.sh
benches/: all.rs
src/: lib.rs  rusty_html.rs
